clusters/k3s-cluster/stirling-pdf/stirling-pdf.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stirling-pdf
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  type: ClusterIP
  selector:
    app: stirling-pdf
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: stirling-pdf
          image: frooodle/s-pdf:2.5.0
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              memory: "2Gi"
              cpu: "2000m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/info/status
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/v1/info/status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: stirling-data
              mountPath: /configs
            - name: stirling-logs
              mountPath: /logs
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: stirling-data
          emptyDir: {}
        - name: stirling-logs
          emptyDir: {}
        - name: tmp
          emptyDir: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: limit
  namespace: stirling-pdf
spec:
  buffering:
    maxRequestBodyBytes: 500000000
    memRequestBodyBytes: 500000000
    maxResponseBodyBytes: 500000000
    memResponseBodyBytes: 500000000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  labels:
    name: stirling-pdf
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: stirling-pdf-limit@kubernetescrd
spec:
  rules:
    - host: pdf.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: stirling-pdf
                port:
                  number: 8080
